--- a/casestudy_pandion.html
+++ b/casestudy_pandion.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/casestudy_styles.css">
     <title>No Unicorn (Yet)</title>
+    <link rel="icon" type="image/png" href="images/logo/favicon16x16.svg" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/logo/favicon32x32.svg" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/logo/favicon96x96.svg" sizes="96x96">
 </head>
 
     <body>
         <header class="primary-header flex">
-            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo"></a>
-            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo-no-unicorn"></a>
+            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo-no-unicorn-mobile"></a>
 
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
@@ -30,7 +33,7 @@
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PREISE</p>
+                            <p>LEISTUNGEN</p>
                         </a>
                     </li>
                     <li>
@@ -47,7 +50,7 @@
                 <h2 class="hero-header margintop">Pandion</h2>
                 <h2 class="hero-slogan">”Himmel Unter Berlin” - Einladungsmanagement</h2>
             </div>
-            <img class="margintop hdpicture" src="./images/cs_pandion/Pandion_hero.png" alt="plakat qt/eventstudio">
+            <img class="margintop hdpicture" src="./images/cs_pandion/Pandion_hero.png" alt="Pandion Tunnel rot">
         </div>
 
         <div class="page-wrapper">
@@ -75,25 +78,26 @@
                     <h2 class="margintop">DER PROZESS</h2>
                 </div>
                 <div class="process-right-side">
-                    <p class="margintop">Durch moderne Software ist es uns möglich, individualisierte QR-Codes automatisch zu generieren, wobei jeder QR-Code eine spezifischen Emailadresse auf der Gästeliste zugeordnet wird. Um eine zusätzliche Absicherung für den Kunden zu schaffen, haben wir das Grafikdesign so angelegt, dass es sichim Falle einer Weiterleitung offensichtlich verschiebt und damit offenbart, keine offizielle Einladung zu sein</p>
+                    <p class="margintop">Durch moderne Software ist es uns möglich, individualisierte QR-Codes automatisch zu generieren, wobei jeder QR-Code eine spezifischen Emailadresse auf der Gästeliste zugeordnet wird. Um eine zusätzliche Absicherung für den Kunden zu schaffen, haben wir das Grafikdesign so angelegt, dass es sich im Falle einer Weiterleitung offensichtlich verschiebt und damit offenbart, keine offizielle Einladung zu sein.
+                    </p>
                 </div>
             </div>
             <div class="swiper qtProcessSlider qtresults margintop">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_pandion/Pandion_process1.png" alt="process one">
+                            <img src="./images/cs_pandion/Pandion_process1.png" alt="Pandion Bunker">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
                             <img src="./images/cs_pandion/Pandion_process2.png"
-                             alt="process two">
+                             alt="Pandion Lighthouse">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_pandion/Pandion_process3.png"  alt="process three">
+                            <img src="./images/cs_pandion/Pandion_process3.png"  alt="Pandion Mannequin">
                         </div> 
                     </div>
                 </div>
@@ -103,7 +107,7 @@
                 <p class="test-text margintop">Da das Projekt in einer ‘Secret-Location’ stattgefunden hat, mussten wir die Einladungen auf drei Mailings aufsplitten: Allgemeine Einladung, Bestätigung und Bekanntgabe der Location. Die eingeladenen Gäste konnten sich direkt in der Mail und ohne Umweg einer Landing Page für das Event einladen und erhielten bei Bestätigung einen automatisierten Kalendereintrag auf ihren unterschiedlichen Devices.   
                 </p>
             </div>
-            <img class="metroboard margintop hdpicture" src="./images/cs_pandion/Pandion_banner.png" alt="metroboard">
+            <img class="metroboard margintop hdpicture" src="./images/cs_pandion/Pandion_banner.png" alt="Pandion Installation">
             <div class="page-wrapper">
                 <p class="margintop">“Wer eine professionelle, unkomplizierte und rasche Umsetzung des Einladungsmanagements für seine Veranstaltungen benötigt und außerdem erwartet, dass kurzfristige Ergänzungen immer möglich sind, ist beim NoUnicornYet-Team an der richtigen Adresse. Regelmäßige Updates und ein zuverlässiges Feedback runden das Gesamtpaket ab! Wir waren sehr zufrieden und freuen uns auf die weitere Zusammenarbeit.”
                 </p>
@@ -170,7 +174,7 @@
                 <div class="cta-section">
                     <h1 id="cta-text">LET'S WORK TOGETHER!</h1>
                     <h2 id="cta-mail">moritz@nounicornyet.com</h2>
-                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail"></a>
+                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail cta logo"></a>
                 </div>
                 <hr></hr>
                 <div class="footer-section">
