--- a/casestudy_qteventstudio.html
+++ b/casestudy_qteventstudio.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/casestudy_styles.css">
     <title>No Unicorn (Yet)</title>
+    <link rel="icon" type="image/png" href="images/logo/favicon16x16.svg" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/logo/favicon32x32.svg" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/logo/favicon96x96.svg" sizes="96x96">
 </head>
 
     <body>
         <header class="primary-header flex">
-            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo"></a>
-            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo-no-unicorn"></a>
+            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo-no-unicorn-mobile"></a>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
             <nav>            
@@ -29,7 +32,7 @@
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PREISE</p>
+                            <p>LEISTUNGEN</p>
                         </a>
                     </li>
                     <li>
@@ -46,7 +49,7 @@
                 <h2 class="hero-header margintop">QT/eventstudio</h2>
                 <h2 class="hero-slogan">#QTfulEventsOnly</h2>
             </div>
-            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_hero.png" alt="plakat qt/eventstudio">
+            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_hero.png" alt="Plakat qt/eventstudio">
         </div>
 
         <div class="page-wrapper">
@@ -55,7 +58,8 @@
                     <h2 class="challenge-header margintop">DIE CHALLENGE</h2>
                 </div>
                 <div class="challenge-right-side">
-                    <p class="margintop">QT/eventstudio ist seit 2005 eine der führenden Eventagenturen in Berlin.Die Agentur agiert europaweit im MICE Segment (Meetings, Incentives, Conventions & Events) für das Inbound-Outbound Geschäft.Die Corona-Pandemie hat die Agentur dazu gezwungen, sich neu zu erfinden. Eine Aufgabe, die das Team rund um die Geschäftsführerin Fulvia Pieroni bravorös gemeistert hat, indem sie ihrem Leistungsangebot ein eigenes Digital Studio sowie ein hauseigenes Bistro & Deli hinzugefügt hat. All das unter dem Leitmotiv, “Connectivity und Miteinander neu und modern zu denken!”Dafür haben wir von No Unicorn (Yet) eine auf ein Jahr angelegte und durch 4 Kampagnen kommunizierte Strategie erstellt.</p>
+                    <p class="margintop">QT/eventstudio ist seit 2005 eine der führenden Eventagenturen in Berlin. Die Agentur agiert europaweit im MICE Segment (Meetings, Incentives, Conventions & Events) für das Inbound-Outbound Geschäft. Die Corona-Pandemie hat die Agentur dazu gezwungen, sich neu zu erfinden. Eine Aufgabe, die das Team rund um die Geschäftsführerin Fulvia Pieroni bravorös meisterte, indem sie ihrem Leistungsangebot ein eigenes Digital Studio sowie ein hauseigenes Bistro & Deli hinzugefügt hat. All das unter dem Leitmotiv, “Connectivity und Miteinander neu und modern zu denken!” Dafür haben wir von No Unicorn (Yet) eine auf ein Jahr angelegte und durch 4 Kampagnen kommunizierte Strategie erstellt.
+                    </p>
                     <h4 class="margintop">Brand Book</h4>
                     <hr></hr>
                     <h4 class="margintop">Strategie</h4>
@@ -85,42 +89,42 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_process1.png" alt="process one">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process1.png" alt="qt/eventstudio Prozess eins">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_process2.png" alt="process two">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process2.png" alt="qt/eventstudio Prozess zwei">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_process3.png" alt="process three">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process3.png" alt="qt/eventstudio Prozess drei">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_process4.png" alt="process four">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process4.png" alt="qt/eventstudio Prozess vier">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_process5.png" alt="process five">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process5.png" alt="qt/eventstudio Prozess fünf">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_process6.png" alt="process six">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process6.png" alt="qt/eventstudio Prozess sechs">
                         </div> 
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
             <div class="page-wrapper">
-                <p class="test-text margintop">Basierend auf dem abgestimmten Brand Book, der daraus folgendsen   Strategie und den auf ihr basierenden 4 Kampagnen haben wir dann entsprechende Templates für alle digitalen Medien & Drucksorten erstellt, wie oben anhand der Bilder zum ‘Grid’ zu sehen.   
+                <p class="test-text margintop">Basierend auf dem abgestimmten Brand Book, der daraus folgenden Strategie und den auf ihr basierenden 4 Kampagnen haben wir dann entsprechende Templates für alle digitalen Medien & Drucksorten erstellt, wie oben anhand der Bilder zum ‘Grid’ zu sehen.  
                 </p>
             </div>
-            <img class="metroboard margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_banner1.png" alt="metroboard">
+            <img class="metroboard margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_banner1.png" alt="qt/eventstudio Metroboard">
             <div class="page-wrapper">
                 <p class="margintop">“Weil die Kundin sowohl socializing als auch business-based Content in einem Brand kommunizieren wollte, mussten wir einerseits genügend Raum für das ‘Lebensgefühl hinter QT/’, andererseits aber auch den faktisch wirtschaftlichen Mehrwert des Unternehmens in ein und derselben Außendarstellung manifestieren. Unser Slogan “QTful Events Only” deckt beide dieser Seiten ab. Er steht sowohl für professionelles Eventmanagement, als auch für einzigartige Erlebnisse, die wir mit den Events persönlich verbinden.”
                 </p>
@@ -137,32 +141,32 @@
                     </p>
                 </div>
             </div>
-            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_banner2.png" alt="lifeisqtful">
+            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_banner2.png" alt="Lifeisqtful ad">
             <div class="swiper qtProcessSlider qtresults margintop">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img class="unselectable" src="./images/cs_qteventstudio/QTeventstudio_results1.png" alt="process one">
+                            <img class="unselectable" src="./images/cs_qteventstudio/QTeventstudio_results1.png" alt="qt/eventstudio mockup eins">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_results2.png" alt="process two">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_results2.png" alt="qt/eventstudio mockup zwei">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_results3.png" alt="process three">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_results3.png" alt="qt/eventstudio mockup drei">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_results4.png" alt="process four">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_results4.png" alt="qt/eventstudio mockup vier">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/QTeventstudio_results5.png" alt="process five">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_results5.png" alt="qt/eventstudio ad">
                         </div> 
                     </div>
                 </div>
@@ -195,7 +199,7 @@
                 <div class="cta-section">
                     <h1 id="cta-text">LET'S WORK TOGETHER!</h1>
                     <h2 id="cta-mail">moritz@nounicornyet.com</h2>
-                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail"></a>
+                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail cta logo"></a>
                 </div>
                 <hr></hr>
                 <div class="footer-section">
