--- a/casestudy_siemens.html
+++ b/casestudy_siemens.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/casestudy_styles.css">
     <title>No Unicorn (Yet)</title>
+    <link rel="icon" type="image/png" href="images/logo/favicon16x16.svg" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/logo/favicon32x32.svg" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/logo/favicon96x96.svg" sizes="96x96">
 </head>
 
     <body>
         <header class="primary-header flex">
-            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo"></a>
-            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo-no-unicorn"></a>
+            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo-no-unicorn-mobile"></a>
 
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
@@ -30,7 +33,7 @@
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PREISE</p>
+                            <p>LEISTUNGEN</p>
                         </a>
                     </li>
                     <li>
@@ -45,9 +48,9 @@
         <div class="hero-section">
             <div class="page-wrapper">
                 <h2 class="hero-header margintop">Siemensstadt Square</h2>
-                <h2 class="hero-slogan">Fassadengestaltung einer denkmalgeschützten 600qm Fassade</h2>
+                <h2 class="hero-slogan">Gestaltung einer denkmalgeschützten 600m<sup>2</sup> Fassade</h2>
             </div>
-            <img class="margintop hdpicture" src="./images/cs_siemens/Siemens_hero.png" alt="fassade Siemensstadt">
+            <img class="margintop hdpicture" src="./images/cs_siemens/Siemens_hero.png" alt="Fassade Siemensstadt">
         </div>
 
         <div class="page-wrapper">
@@ -81,17 +84,22 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_siemens/Siemens_process1.png" alt="process one">
+                            <img src="./images/cs_siemens/Siemens_process1.png" alt="Siemensstadt Präsentation">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_siemens/Siemens_process2.png" alt="process three">
+                            <img src="./images/cs_siemens/Siemens_process2.png" alt="Fassade Enthüllung">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_siemens/Siemens_process3.png" alt="process two">
+                            <img src="./images/cs_siemens/Siemens_process4.png" alt="Neue Fassade">
+                        </div> 
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-card">
+                            <img src="./images/cs_siemens/Siemens_process5.png" alt="Ausschnitt Siemensstadt-Banner">
                         </div> 
                     </div>
                     
@@ -102,7 +110,7 @@
                 <p class="test-text margintop">Die Fassade wurde binnen eines verlängerten Wochenendes von uns foliert, wobei der zu veröffentlichte Name nach der Folierung noch einmal durch eine Zusatzfolie überdeckt wurde, um diesen erst am Tag der Namens-Veröffentlichung enthüllen zu können.   
                 </p>
             </div>
-            <img class="siemensstadtpic margintop" src="./images/cs_siemens/Siemens_banner.png" alt="siemensbanner">
+            <img class="siemensstadtpic margintop" src="./images/cs_siemens/Siemens_banner.png" alt="Van Design">
             <div class="page-wrapper">
                 <p class="margintop">“Durch unsere unermüdliche Recherche und unseren Einsatz sind wir durch das Siemensstadt-Square-Projekt nun in der Lage, unter Denkmalschutz stehende Flächen zu kommunikativen Zwecken zu nutzen. Das Projekt war ein Meilenstein in unserer bisherigen Agentur und ich freue mich sehr, diese Innovation mit vorangetrieben zu haben.””
                 </p>
