--- a/impressum.html
+++ b/impressum.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/casestudy_styles.css">
     <title>No Unicorn (Yet)</title>
+    <link rel="icon" type="image/png" href="images/logo/favicon16x16.svg" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/logo/favicon32x32.svg" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/logo/favicon96x96.svg" sizes="96x96">
 </head>
 
     <body>
         <header class="primary-header flex">
-            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo"></a>
-            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo-no-unicorn"></a>
+            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo-no-unicorn-mobile"></a>
 
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
@@ -30,7 +33,7 @@
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PREISE</p>
+                            <p>LEISTUNGEN</p>
                         </a>
                     </li>
                     <li>
@@ -85,7 +88,7 @@
                 <div class="cta-section">
                     <h1 id="cta-text">LET'S WORK TOGETHER!</h1>
                     <h2 id="cta-mail">moritz@nounicornyet.com</h2>
-                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail"></a>
+                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail cta logo"></a>
                 </div>
                 <hr></hr>
                 <div class="footer-section">
