--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <title>No Unicorn (Yet)</title>
+    <link rel="icon" type="image/png" href="images/logo/favicon16x16.svg" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/logo/favicon32x32.svg" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/logo/favicon96x96.svg" sizes="96x96">
 </head>
 
     <body>
         <header class="primary-header flex">
-            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo"></a>
-            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo-no-unicorn"></a>
+            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo-no-unicorn-mobile"></a>
 
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
@@ -30,7 +33,7 @@
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PREISE</p>
+                            <p>LEISTUNGEN</p>
                         </a>
                     </li>
                     <li>
@@ -78,33 +81,28 @@
                 </div>
                 <div class="right-side">
                     <div class="content-area">
+                        <img src="images/placeholdersvg/strategies.svg" alt="strategies-svg">
                         <div class="content-text">
                             <h4>Strategien</h4>
                             <p>Unser Expertenteam aus Marketing, Public Relations und lokaler Kunst erstellen Ihre individuelle Kommunikationsstrategie, um Ihr Unternehmen kurz-, mittel- & langfristig an Ihre Zielgruppe zu binden. </p>
                         </div>
                     </div>
                     <div class="content-area">
+                        <img src="images/placeholdersvg/concepts.svg" alt="concepts-svg">
                         <div class="content-text">
                             <h4>Konzepte</h4>
                             <p>Wir erstellen für Ihren Brand einzigartige und erlebbare Kommunikationskonzepte, um Ihr Unternehmen für Ihre Zielgruppe nahbar, modern und erlebbar zu machen. </p>
                         </div>
                     </div>
                     <div class="content-area">
-                        <div class="content-text">
-                            <h4>NFT Real Estate</h4>
-                            <p>Die ultimative App zur Investoren-Akquise. Wir verbinden Ihr 3D-Modelling samt Location- & Profitabilitätsanalysen mit Live-Kommunikation und einer Gaming-Engine, um den Mehrwert Ihres kommenden Bauprojekts für Investoren lange vor Baubeginn erlebbar zu machen.
-
-                            Als Second Value kann ihr digitales Projekt als NFT gemintet und in Metaverse eingespeist werden. 
-                            </p>
-                        </div>
-                    </div>
-                    <div class="content-area">
+                        <img src="images/placeholdersvg/socialmedia.svg" alt="socialmedia-svg">
                         <div class="content-text">
                             <h4>Social Media</h4>
                             <p>Wir erstellen für Ihr Unternehmen eine langfristige Social Media Planung, von der Konzeption, über die Redaktion bis hin zur Umsetzung samt Monitoring und regelmäßigem Reporting.</p>
                         </div>
                     </div>
                     <div class="content-area">
+                        <img src="images/placeholdersvg/artevents.svg" alt="artevents-svg">
                         <div class="content-text">
                             <h4>Kunst & Events</h4>
                             <p>Die Welt ist voller Eindrücke, aber woran es fehlt, sind Erlebnisse! Aus diesem Grund bieten wir Ihrem Unternehmen eine umfangreiche Veranstaltungsplanung, von Business Talks, über Kunstausstellungen bis hin zur Performance Art. So bleibt Ihr Unternehmen nachhaltig in Erinnerung bei Ihrer Zielgruppe und Sie vermitteln die Philosophie Ihres Unternehmens zusätzlich auf erlebbare Weise. </p>
@@ -159,18 +157,18 @@
                     <h2>UNSERE<br>GRÜNDER</h2>
                     <div class="founder-rightside">
                         <p>
-                            Unternehmenskommunikation muss ein Dialog sein. Er muss nahbar und transparent sein und für die Gemeinschaft einen Mehrwert bieten. Die Zeiten gesichtsloser Unternehmen und monoligisierender Pressemitteilungen ist vorbei. Darum haben wir No Unicorn (Yet) gegründet.”
+                            "Unternehmenskommunikation muss ein Dialog sein. Er muss nahbar und transparent sein und für die Gemeinschaft einen Mehrwert bieten. Die Zeiten gesichtsloser Unternehmen und monoligisierender Pressemitteilungen ist vorbei. Darum haben wir No Unicorn (Yet) gegründet.”
                         </p>
                         <div class="founder-portrait">
                             <div class="portrait-card">
-                                <img src="images/founder_picture2.png" alt="Moritz Tonn">
+                                <img src="images/founder_picture2.png" alt="Moritz Tonn picture">
                                 <div class="founder-description">
                                     <p class="portrait-name">Moritz Tonn</p>
                                     <p>Über 10 Jahre Erfahrung in der Theaterregie, der Kunstkuration, der PR und der Kommunikation in Wien und Berlin. Dort arbeitete er als Regisseur, Kurator und Consultant für sozio-kulturelle Kommunikation.</p>
                                 </div>
                             </div>
                             <div class="portrait-card">
-                                <img src="images/founder_picture1.png"  alt="Samir Abdo">
+                                <img src="images/founder_picture1.png"  alt="Samir Abdo picture">
                                 <div class="founder-description">
                                     <p class="portrait-name">Samir  Abdo</p>
                                     <p>Über 30 Jahre Erfahrung in Gastronomie & Hospitality in New York, Los Angeles, New Orleans und Mailand. Dort leitete Samir Clubs, Restaurants und Bars von der Konzeption bis zur Umsetzung </p>
@@ -286,14 +284,14 @@
                     </tr><tr>
                         <td class="highlighted">Brand Creation</td>
                         <td>300+</td>
-                        <td>Redaktionspläne für alle Accounts, Umsetzung, Monitoring & Reporting</td>
+                        <td>Wir erschaffen Ihren Brand - von der Idee bis zur strukturierten Umsetzung Ihrer Außenkommunikation</td>
                     </tr><tr>
                         <td class="highlighted">Social Media-Betreuung</td>
-                        <td>25+ Std. / Monat+</td>
+                        <td>25+ Std. / Monat</td>
                         <td>Redaktionspläne für alle Accounts, Umsetzung, Monitoring & Reporting</td>
                     </tr><tr>
                         <td class="highlighted">Brand Management</td>
-                        <td>35+ Std. / Monat+</td>
+                        <td>35+ Std. / Monat</td>
                         <td>Alle obigen Leistungen ab einer Laufzeit von 1 Jahr</td>
                     </tr>
                 </table>
@@ -430,7 +428,7 @@
                                 <p class="pricing-content">300+</p>
                                 <hr></hr>
                                 <p class="pricing-category">BESCHREIBUNG</p>
-                                <p class="pricing-content">Brand Book, Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
+                                <p class="pricing-content">Wir erschaffen Ihren Brand - von der Idee bis zur strukturierten Umsetzung Ihrer Außenkommunikation</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
@@ -485,7 +483,7 @@
                 <div class="cta-section">
                     <h1 id="cta-text">LET'S WORK TOGETHER!</h1>
                     <h2 id="cta-mail">moritz@nounicornyet.com</h2>
-                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail"></a>
+                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail cta logo"></a>
                 </div>
                 <hr></hr>
                 <div class="footer-section">
